# StructuredFuzzer

./: .gitignore  Makefile  README.md  build.sh  environment.yml  inputs.h  install.sh  main.c  main.st  notes.org  package-lock.json  plc.c  setup_matiec.sh
code_analysis/: .gitignore  README.md  build-tree-sitter.sh  package.json  pyproject.toml  rebuild.sh  requirements.txt
code_analysis/analyzer/: pyproject.toml
code_analysis/example-tree-sitter-grammar/: Cargo.toml  binding.gyp  grammar.js  package.json
code_analysis/programs/: aircraft_flight_control_code1_version_1.st  aircraft_flight_control_code1_version_2.st  aircraft_flight_control_code1_version_3.st  aircraft_flight_control_code1_version_4.st  aircraft_flight_control_code2_version_1.st  aircraft_flight_control_code2_version_2.st  aircraft_flight_control_code2_version_3.st  aircraft_flight_control_code2_version_4.st  aircraft_flight_control_code3_version_1.st  aircraft_flight_control_code3_version_2.st  aircraft_flight_control_code4_version_1.st  aircraft_flight_control_code4_version_2.st  anaerobic_digestion_reactor_code1_version_1.st  anaerobic_digestion_reactor_code1_version_2.st  anaerobic_digestion_reactor_code1_version_3.st  anaerobic_digestion_reactor_code1_version_4.st  anaerobic_digestion_reactor_code2_version_1.st  anaerobic_digestion_reactor_code2_version_2.st  anaerobic_digestion_reactor_code2_version_3.st  anaerobic_digestion_reactor_code2_version_4.st  anaerobic_digestion_reactor_code2_version_5.st  anaerobic_digestion_reactor_code3_version_1.st  (+28 more)
fuzzer/: .gitignore  Cargo.toml
(+1634 files in other folders)
