[project]
name = "analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tree-sitter==0.21.0",
    "z3-solver>=4.15.1.0",
]

[project.scripts]
analyzer = "analyzer.main:main"

[tool.setuptools]
packages = ["analyzer"]
package-dir = {"" = "src"}
